--- a/components/InputField/CountryStateMultiple/CountryStateCityMultiple.module.scss
+++ b/components/InputField/CountryStateMultiple/CountryStateCityMultiple.module.scss
@@ -144,3 +144,37 @@
     }
   }
 }
+
+@media only screen and (max-width: 990px) and (min-width: 768px) {
+  .singleBox {
+      flex-direction: column;
+
+      .inputBox{
+        margin: 0.6rem 0;
+      }
+  }
+}
+
+@media only screen and (max-width: 767px) and (min-width: 300px) {
+  
+  .singleBox {
+      flex-direction: column;
+
+      .inputBox{
+        margin: 0.6rem 0;
+        min-width: 100%;
+
+      }
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .singleBox {
+      flex-direction: column;
+
+      .inputBox{
+        margin: 0.6rem 0;
+        min-width: 100%;
+      }
+  }
+}
