--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -243,7 +243,7 @@
   }
 }
 
-@media only screen and (max-width: 540px) and (min-width: 423px) {
+@media only screen and (max-width: 767px) and (min-width: 423px) {
   .profile_Container {
     padding: 0 2rem;
     padding-bottom: 5rem;
@@ -256,6 +256,7 @@
 
       label {
         position: initial;
+        display: block;
         margin: 0%;
         text-align: start;
       }
