--- a/components/StrictRadioCheck/StrictRadio.module.scss
+++ b/components/StrictRadioCheck/StrictRadio.module.scss
@@ -1,19 +1,15 @@
 .StrictWrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    // background: rgb(185, 250, 148);
-    width: 26%;
-    margin-top: -1rem;
-
+    width: 100%;
+    justify-content: center;
+    max-width: 232px;
 
     .StrictWrapper_section {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 3rem;
-        width: 90%;
-        margin-top: 10px;
 
         .Switch {
             display: flex;
@@ -30,8 +26,8 @@
             .SwitctCusttom {
 
                 >div {
-                    height: 23px !important;
-                    width: 52px !important;
+                    height: 21px !important;
+                    width: 51px !important;
                     margin: 0px;
 
                     div {
@@ -40,380 +36,36 @@
                 }
 
                 :nth-child(2) {
-                    height: 22px !important;
-                    width: 22px !important;
-                    // transform: translateX(23px) !important;
+                    height: 20px !important;
+                    width: 20px !important;
                     top: 0 !important;
                 }
             }
         }
 
-        .marTOP {
-            margin-top: 4.5rem;
-            margin-bottom: 5px;
 
-        }
-
-        :nth-child(6) {
-            margin-top: 2.5rem;
-            margin-bottom: 5px;
-        }
-        :nth-child(7) {
-            margin-top: 3.3rem;
-            margin-bottom: 5px;
-        }
-        :nth-child(9) {
-            margin-top: 4rem;
-            margin-bottom: 5px;
-        }
-        :nth-child(10) {
-            margin-top: 3rem;
-            margin-bottom: 5px;
-        }
-        :nth-child(11) {
-            margin-top: 3rem;
-            margin-bottom: 5px;
-        }
-
-        :nth-child(12) {
-            margin-top: 2.5rem;
-            margin-bottom: 5px;
-        }
-        :nth-child(n+13) {
-            margin-top: 3rem;
-            margin-bottom: 5px;
-        }
-        :nth-child(n+17) {
-            margin-top: 2.5rem;
-            margin-bottom: 5px;
-        }
-
-        :nth-child(19) {
-            margin-top: 3rem;
-            margin-bottom: 5px;
-        }
-
-        :nth-child(20) {
-            margin-top: 3.5rem;
-            margin-bottom: 5px;
-        }
-
-
-
-        .mart5 {
-            margin-top: 10px;
-        }
-
-        :nth-child(1) {
-            margin-top: 0;
-        }
-
-        :nth-child(2) {
-            margin-top: 0;
-        }
 
     }
 }
 
 
-@media only screen and (max-width: 1200px) and (min-width: 900px) {
+@media only screen and (max-width: 1200px) and (min-width: 300px) {
     .StrictWrapper {
-        .StrictWrapper_section {
-            margin-top: 0%;
-            margin-right: -15px;
-            gap: 2.8rem;
-
-
-            .marTOP {
-                margin-top: 4rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(10) {
-                margin-top: 2.5rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(12) {
-                margin-top: 2.5rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(19) {
-                margin-top: 4.5rem;
-                margin-bottom: 5px;
-
-            }
-
-            :nth-child(20) {
-                margin-top: 3.5rem;
-                margin-bottom: 5px;
-
-            }
-
-            .mart5 {
-                margin-top: 0px;
-            }
-
-
-        }
-    }
-
-}
-
-@media only screen and (max-width: 990px) and (min-width: 300px) {
-    .StrictWrapper {
-        width: 40%;
-        margin-top: -0.5rem;
         position: absolute;
-        top: -2rem;
-        align-items: flex-end;
-        right: 1.5rem;
-
-        .StrictWrapper_section {
-            width: 100%;
-            gap: 10rem;
-            margin-top: 0px;
-
-            .marTOP {
-                margin-top: 0rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(7) {
-                margin-top: -1.5rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(8) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(9) {
-                margin-top: -4.5rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(10) {
-                margin-top: -2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+11) {
-                margin-top: -1.5rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+16) {
-                margin-top: -4.7rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(20) {
-                margin-top: -1.5rem;
-                margin-bottom: 5px;
-            }
-        }
+        right: 0rem;
     }
+
 }
 
-@media only screen and (max-width: 767px) and (min-width: 415px) {
-    .StrictWrapper {
-        width: 70%;
-        right: 1rem;
 
-        .StrictWrapper_section {
-            width: 100%;
-            gap: 10.2rem;
-            margin-top: 0px;
-
-            .Switch {
-                justify-content: flex-end;
-                gap: 0.5rem;
-                width: 100%;
-                align-items: center;
-            }
-
-            .marTOP {
-                margin-top: -0.2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(7) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(8) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(9) {
-                margin-top: -5rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(10) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+11) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+16) {
-                margin-top: -4.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(19) {
-                margin-top: -5rem;
-                margin-bottom: 5px;
-            }
-            :nth-child(20) {
-                margin-top: -1.9rem;
-                margin-bottom: 5px;
-            }
-        }
-    }
-}
-@media only screen and (max-width: 415px) and (min-width: 300px) {
-    .StrictWrapper {
-        width: 70%;
-        right: 1rem;
-
-        .StrictWrapper_section {
-            width: 100%;
-            gap: 10.2rem;
-            margin-top: 0px;
-
-            .Switch {
-                justify-content: flex-end;
-                gap: 0.5rem;
-                width: 100%;
-                align-items: center;
-            }
-
-            .marTOP {
-                margin-top: -0.2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(7) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(8) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(9) {
-                margin-top: -5.2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(10) {
-                margin-top: -2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+11) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+16) {
-                margin-top: -5.1rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(19) {
-                margin-top: -5.4rem;
-                margin-bottom: 5px;
-            }
-            :nth-child(20) {
-                margin-top: -1.5rem;
-                margin-bottom: 5px;
-            }
-        }
-    }
-}
 @media only screen and (max-width: 300px) {
     .StrictWrapper {
-        width: 40%;
-        right: 1rem;
         position: absolute;
-        top: -1rem;
-        h4{
-            font-size: 18px;
-            margin-bottom: 10px !important;
-        }
+        right: 0rem;
+        width: auto;
 
-        .StrictWrapper_section {
-            width: 100%;
-            gap: 10.2rem;
-            margin-top: 0px;
-
-            .Switch {
-                justify-content: flex-end;
-                gap: 0.5rem;
-                width: 100%;
-                align-items: center;
-
-                span{
-                    display: none;
-                }
-            }
-
-            .marTOP {
-                margin-top: -0.2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(7) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(8) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(9) {
-                margin-top: -5.2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(10) {
-                margin-top: -2rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+11) {
-                margin-top: -1.8rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(n+16) {
-                margin-top: -5.1rem;
-                margin-bottom: 5px;
-            }
-
-            :nth-child(19) {
-                margin-top: -5.4rem;
-                margin-bottom: 5px;
-            }
-            :nth-child(20) {
-                margin-top: -1.5rem;
-                margin-bottom: 5px;
-            }
+        span {
+            display: none;
         }
     }
 }
