--- a/components/InputField/CountryStateSingle/CountryStateCityMultiple.module.scss
+++ b/components/InputField/CountryStateSingle/CountryStateCityMultiple.module.scss
@@ -34,24 +34,13 @@
       margin: 0;
       padding: 0 5px;
       width: 100%;
-      max-height: 100px;
-      overflow-x: hidden;
       cursor: text;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
 
-      li {
-        position: relative;
-        margin: 3px 5px 3px 0;
-        padding: 10px 20px 10px 5px;
-        border: 1px solid #d9d9d9;
-        max-width: 100%;
-        border-radius: 3px;
-        background-color: #f5f5f5;
-        line-height: 13px;
-        cursor: default;
-        height: fit-content;
+      p {
+        font-size: 17px !important;
+        font-weight: 400;
+        margin: 0%;
+        color: #000000;
       }
     }
 
@@ -98,6 +87,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 0.5rem;
+      overflow-y: scroll;
 
       li {
         position: relative;
