--- a/pages/Register/RegisterDetails.module.scss
+++ b/pages/Register/RegisterDetails.module.scss
@@ -2,8 +2,7 @@
 @import "../../styles/constants.scss";
 
 .background_header {
-  background: url("../../public/Images/cover-image-register.jpg") no-repeat
-    center center;
+  background: url("../../public/Images/cover-image-register.jpg") no-repeat center center;
   padding-top: 2.1875rem;
   background-size: cover;
 }
@@ -13,6 +12,8 @@
   text-align: center;
   width: 75%;
   margin: auto;
+  position: relative;
+
   .topButtons {
     border-bottom: 2px solid #fff;
     font-size: 17px;
@@ -22,13 +23,33 @@
     color: #fff;
     opacity: 0.5;
     cursor: pointer;
+
     @media only screen and (max-width: 768px) {
       display: none;
     }
   }
 
+  .prevButton {
+    height: 40px;
+    width: 40px;
+    background: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: none;
+    position: absolute;
+    left: 0%;
+    top: 50%;
+    transform: translateY(-61%);
+
+    @media only screen and (max-width: 768px) {
+      display: block;
+    }
+  }
+
   .active {
     opacity: 1;
+
     @media only screen and (max-width: 768px) {
       display: block;
     }
@@ -45,6 +66,7 @@
   .register_header_Links {
     padding: 38px 0;
   }
+
 }
 
 @media only screen and (max-width: 415px) {
@@ -55,6 +77,7 @@
 }
 
 @media only screen and (max-width: 300px) {
+
   .register_header_Links,
   .register_header_Links a {
     width: 100%;
