height nan issue resolve,country city state relode issue resolve , partner profile background gray

--- a/components/InputField/DoubleInputField/DoubleInput.module.scss
+++ b/components/InputField/DoubleInputField/DoubleInput.module.scss
@@ -25,6 +25,7 @@
         cursor: pointer;
         position: relative;
         min-width: 46%;
+        background: #fff;
 
         .inputBoxVal {
             visibility: hidden;
