--- a/components/InputField/SingleInputField/SingleInput.module.scss
+++ b/components/InputField/SingleInputField/SingleInput.module.scss
@@ -28,6 +28,7 @@
         width: 100%;
         position: relative;
         height: 8rem;
+        background: #fff;
 
         ul {
             list-style: none;
