--- a/pages/DesiredProfile/DesiredProfile.module.scss
+++ b/pages/DesiredProfile/DesiredProfile.module.scss
@@ -13,7 +13,7 @@
 
   .innerWrapper {
     width: 85%;
-    background-color: $milkWhite_bg;
+    background-color: rgb(231, 230, 230);
     padding: 0 6rem;
     padding-right: 3rem;
 
