--- a/components/AvatarPicker/AvtarPicker.module.scss
+++ b/components/AvatarPicker/AvtarPicker.module.scss
@@ -3,6 +3,7 @@
         padding: 1.5rem 0;
         padding-left: 1.5rem;
         width: -webkit-fill-available;
+        visibility: 0;
     }
 
     .canvasIMG {
