--- a/components/InputField/CountryStateMultiple/CountryStateCityMultiple.module.scss
+++ b/components/InputField/CountryStateMultiple/CountryStateCityMultiple.module.scss
@@ -28,7 +28,7 @@
     width: 100%;
     position: relative;
     height: 8rem;
-
+    background: #fff;
     ul {
       list-style: none;
       margin: 0;
