--- a/components/AvatarPicker/AvtarPicker.module.scss
+++ b/components/AvatarPicker/AvtarPicker.module.scss
@@ -1,23 +1,24 @@
+.Profile_input {
+  color: transparent;
+}
 @media only screen and (max-width: 1200px) {
-    .Profile_input {
-        padding: 1.5rem 0;
-        padding-left: 1.5rem;
-        width: -webkit-fill-available;
-        visibility: 0;
+  .Profile_input {
+    padding: 1.5rem 0;
+    padding-left: 1.5rem;
+    width: -webkit-fill-available;
+    visibility: 0;
+  }
+  .canvasIMG {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  .BtnDiv {
+    width: 100%;
+
+    .Btn {
+      margin: auto;
+      margin-bottom: 1rem;
     }
-
-    .canvasIMG {
-        width: 100% !important;
-        height: 100% !important;
-    }
-
-    .BtnDiv {
-        width: 100%;
-
-        .Btn {
-            margin: auto;
-            margin-bottom: 1rem;
-        }
-    }
-
+  }
 }
