--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -328,6 +328,7 @@
         margin: 0%;
         text-align: start;
         transform: translateY(0%);
+        min-width: auto;
       }
 
       .singleBox {
