--- a/pages/DesiredProfile/DesiredProfile.module.scss
+++ b/pages/DesiredProfile/DesiredProfile.module.scss
@@ -183,7 +183,7 @@
         border-radius: 2px;
         padding: 0.875rem 2.5rem;
         text-align: center;
-        margin: 0.6em;
+        // margin: 0.6em;
 
         &:focus {
           outline: none;
