--- a/pages/Register/RegisterComponent/RegisterHeader/RegisterHeader.module.scss
+++ b/pages/Register/RegisterComponent/RegisterHeader/RegisterHeader.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/constants.scss";
+
 .Navbar_Wrapper {
   background: $transparent_maroon;
   padding: 0;
@@ -53,6 +54,11 @@
   font-size: 0.9rem;
   font-weight: 500;
   margin-right: 1.5rem;
+  height: 100%;
+
+  button{
+    margin: 0.5rem auto !important;
+  }
 }
 
 .hide {
@@ -68,7 +74,7 @@
 @media screen and (max-width: 300px) {
   .Navbar_Wrapper {
     .navBar_logo {
-      width: 140px;
+      width: 130px;
     }
   }
 
