--- a/pages/DesiredProfile/DesiredProfile.module.scss
+++ b/pages/DesiredProfile/DesiredProfile.module.scss
@@ -20,7 +20,7 @@
     h1 {
       font-size: 1.375rem;
       text-align: center;
-      padding: 2rem 0;
+      padding: 2rem 0 0 0;
     }
 
     p {
