--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -333,7 +333,7 @@
       .singleBox {
         display: flex;
         flex-direction: column;
-
+        gap: 0.5rem;
         .inputBox {
           margin: 0.6rem 0;
           padding: 0%;
