--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,11 @@
 @import "./constants.scss";
+@import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 html,
 body {
   margin: 0;
-  font-family: "Cabin", sans-serif;
+  font-family: 'Schibsted Grotesk', sans-serif;
   font-weight: 400;
 }
 
