--- a/components/CastListDropDown/CastDropdown.module.scss
+++ b/components/CastListDropDown/CastDropdown.module.scss
@@ -16,10 +16,10 @@
     border-radius: 2px;
     padding: 0.5rem 1rem;
     text-align: center;
-    color: $browser_text;
     cursor: pointer;
     position: relative;
     min-width: 275px;
+    color: $browser_text;
     background-color: $milkWhite_bg;
 
     .inputBoxVal {
@@ -48,7 +48,7 @@
         cursor: text;
         display: flex;
         flex-wrap: wrap;
-       overflow-y: auto;
+        overflow-y: auto;
 
         li {
           position: relative;
@@ -80,6 +80,7 @@
     border: none !important;
     background: transparent !important;
     list-style: none;
+
     input {
       padding: 0;
       height: 25px;
@@ -93,6 +94,7 @@
       line-height: normal;
       border-radius: 0;
       width: 100%;
+      text-align: initial;
     }
   }
 
