--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,13 +1,16 @@
 @import "../../styles/constants.scss";
+
 .Navbar_Wrapper {
   background: $transparent_maroon;
   padding: 0;
   height: 63px;
   width: 76%;
   box-shadow: 0 2px 6px 0 rgb(0 0 0 / 20%);
+
   .navBar_logo {
     width: 163px;
     background-color: $milkWhite_bg;
+
     img {
       max-width: 100%;
       height: 63px;
@@ -17,6 +20,9 @@
 }
 
 .nav_links_style {
+  overflow: hidden;
+  height: 100%;
+
   a {
     color: $white_txt !important;
     font-size: 0.9rem;
@@ -26,28 +32,39 @@
     position: relative;
     overflow: hidden;
   }
+
   :hover,
   :focus,
   :active {
     color: $white_txt !important;
   }
-  .navLoginTabs{
+
+  .navLoginTabs {
     position: absolute;
     right: -160px;
     top: 0px;
     display: flex;
     transition: all 0.75s;
+    height: 100%;
   }
-  .active{
+
+  .active {
     right: 0px;
   }
+
+  .RegBtn {
+    height: 100%;
+    background-color: #d9475c;
+  }
 }
+
 .show {
   display: block;
   font-size: 0.9rem;
   font-weight: 500;
   margin-right: 1.5rem;
 }
+
 .hide {
   display: none;
 }
