--- a/components/InputField/CountryStateSingle/CountryStateCityMultiple.module.scss
+++ b/components/InputField/CountryStateSingle/CountryStateCityMultiple.module.scss
@@ -32,9 +32,10 @@
     ul {
       list-style: none;
       margin: 0;
-      padding: 0 5px;
+      padding: 0 0px;
       width: 100%;
       cursor: text;
+      text-align: initial;
 
       p {
         font-size: 17px !important;
