--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -26,6 +26,7 @@
 }
 
 @media only screen and (max-width: 950px) {
+
   .register_header_Links,
   .register_header_Links a {
     width: 100%;
@@ -37,6 +38,7 @@
     display: none;
   }
 }
+
 /////////////////////////////////////////inputboxes SCSS////////////////////////////////////////////////////////////////////////////////
 
 .singleBoxBlock {
@@ -54,6 +56,7 @@
     }
   }
 }
+
 .formEdit {
   text-align: start;
   display: flex;
@@ -94,7 +97,7 @@
     .inputBox {
       border: 1px solid #d9d9d9;
       border-radius: 2px;
-      padding: 0.875rem 5.5rem;
+      padding: 0.875rem 1rem;
       text-align: center;
       margin: 0.6em;
       margin-right: 0%;
@@ -176,22 +179,27 @@
         font-family: sans-serif;
         line-height: normal;
         border-radius: 0;
+        text-align: initial;
       }
-      
-      .inputplacholder{
+
+      .inputplacholder {
         color: #070707;
         font-size: 16px;
+
         ::placeholder {
           color: red;
-          opacity: 1; /* Firefox */
+          opacity: 1;
+          /* Firefox */
         }
-        
-        :-ms-input-placeholder { /* Internet Explorer 10-11 */
-         color: red;
+
+        :-ms-input-placeholder {
+          /* Internet Explorer 10-11 */
+          color: red;
         }
-        
-        ::-ms-input-placeholder { /* Microsoft Edge */
-         color: red;
+
+        ::-ms-input-placeholder {
+          /* Microsoft Edge */
+          color: red;
         }
       }
     }
@@ -204,8 +212,9 @@
   input {
     border: 1px solid #d9d9d9;
     border-radius: 2px;
-    padding: 0.875rem 2.5rem;
-    text-align: center;
+    padding: 0.875rem 1rem;
+    text-align: initial;
+    color: black;
 
     &:focus {
       outline: none;
@@ -218,7 +227,7 @@
 }
 
 .formEdit {
-  + button {
+  +button {
     margin-top: 3rem;
   }
 }
@@ -270,6 +279,7 @@
     padding: 0 2rem;
     padding-bottom: 5rem;
     text-align: center;
+
     .formEdit {
       display: flex;
       flex-direction: column;
@@ -334,6 +344,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+
         .inputBox {
           margin: 0.6rem 0;
           padding: 0%;
